assets/css/styles.css
/******************************************/
/* Variable Selectors */
/******************************************/

/******************************************/
/* Universal Selector */
/******************************************/
/* 1rem is 13px */
html {
  font-size: 13px;
}
/******************************************/
/* Element Selectors */
/******************************************/
nav {
  background-color: black;
  height: 5rem;
}

/* Logo Icon */
nav .brand-logo {
  font-size: 4.5rem;
}

nav ul li {
  display: inline-block;
  margin-left: 1rem;
}

nav ul li a {
  font-family: "Tektur", cursive;
  text-decoration: 1px dotted whitesmoke underline;
}

body {
  background-color: #24292e;
}

h1 {
  font-family: "Edu SA Beginner", cursive;
  font-size: 2rem;
  color: white;
  margin-top: 10px;
}

h2 {
  font-family: "Tektur", cursive;
  font-size: 1rem;
  color: #c9c9c7;
  margin-bottom: 0px;
}

h5 {
  border-bottom: 1px solid;
}

h8 {
  font-weight: bold;
  text-decoration: underline;
}

p {
  font-family: "Roboto Mono", monospace;
  font-size: 0.9rem;
  color: #b6b2bf;
}

/* Feature Images */
img {
  height: 30rem;
  width: 45rem;
  border-radius: 1rem;
  order: 2;
}

/* Removing default button styles */
button {
  background: none;
  border: none;
  cursor: pointer;
  padding: 10px 20px;
  border-radius: 5px;
  font-family: "Roboto Mono", monospace;
  font-size: 1rem;
  color: #b6b2bf;
  background-color: #24292e;
  transition: background-color 0.3s;
}

/* User Question Form */
form.col.col.s12 {
  height: auto;
  width: 70rem;
  background-color: black;
  border-radius: 2rem;
  padding: 8rem;
}
/******************************************/
/* Class Selectors */
/******************************************/
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 10px;
}

/* Feature Containers */
.container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
  padding: 10px;
  margin-top: 5rem;
}

/* Feature Content */
.content {
  flex: 1;
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: center;
}

/* Reversing the order of odd containers */
.container:nth-child(odd) .content {
  align-items: flex-start;
  text-align: center;
}

/* Reversing the order of even containers */
.container:nth-child(even) .content {
  align-items: flex-end;
  text-align: center;
}

/* Reversing the order of images in even containers */
.container:nth-child(even) img {
  order: 1;
}

/* Reversing the order of images in odd containers */
.container:nth-child(odd) img {
  order: -1;
}

/* Centering buttons relative to p tags */
.button-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.button-container a {
  margin-top: 20px;
}

/* Mentor Card Container */
.mentor-card-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

/* mentor card */
.mentor-card {
  display: flex;
  justify-content: center;
  width: 25%;
}

.card-action {
  display: flex;
  justify-content: center;
}

.card .card-action {
  background: none;
  padding: 10px;
}

.card {
  border-radius: 1rem;
  background-color: black;
}

/* Mentor Details */
.card-content {
  text-align: center;
}

.card-content span {
  border-bottom: 2px solid;
}

.card .card-content {
  padding-bottom: 0%;
}

.col.s12 {
  margin-top: 10rem;
}

/* Mentor Self Image */
.card .card-image img {
  border-radius: 50%;
  position: absolute;
  top: -90px;
  left: 50%;
  transform: translateX(-50%);
  height: 100px;
  width: 100px;
}

/* Add Mentor Button */
.centered-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2rem;
}

.row {
  margin-bottom: 0;
  display: flex;
  justify-content: center;
}

.input-field {
  margin-bottom: 0px;
  color: white;
}

/* Dynamically generated questions container */
.card.blue-grey.lighten-5 {
  margin: 3rem;
  padding: 2rem;
}

/* Library cards */
.library-card {
  width: 35%;
  margin: 3rem;
}

.card-content {
  height: 25rem;
}

/* Resource Library Image  */
.library-image {
  height: 25%;
  width: 55%;
  margin: 2px;
}

/* Resource Library Card Title */
.card-title {
  color: white;
}

/* Coding Challenge cards */
.challenge-card {
  width: 35%;
  margin: 3rem;
}

/* Coding Challenges image */
.challenge-image {
  height: 25%;
  width: 45%;
  margin: 2px;
}
/******************************************/
/* ID Selectors */
/******************************************/
#mentorship-body {
  background-image: url(/assets/images/mentorship-background.png);
  background-repeat: no-repeat;
  background-size: cover;
}

#learn-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#textarea1.materialize-textarea {
  padding: 0%;
}

/* Resource Library Container */
#library-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

/* Search bar for resource Library */
#library-search {
  width: 90%;
  margin: 5rem;
  border-radius: 2rem;
}

/* Resource Library contents container */
#library-contents-container {
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
}

/* Coding Challenges Container */
#challenges-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

/* Coding Challenges search bar */
#challenge-search {
  width: 90%;
  margin: 5rem;
  border-radius: 2rem;
}

/* Coding Challenges contents container */
#coding-contents-container {
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
}
/******************************************/
/* Media queries */
/******************************************/

/******************************************/
/* Pseudo Classes and Elements */
/******************************************/
/* Nav Items when hovered on */
nav ul a:hover {
  color: red;
}

/* Learn More buttons when hovered on */
.button-container a button:hover {
  color: red;
}

button:hover {
  background-color: black;
  color: red;
}

